# weather-etl-pipeline

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
dags/: weather_etl_dag.py
mock_data/: Delhi_weather.json  Jakarta_weather.json  Tokyo_weather.json
mock_weather_api/: Dockerfile  mock_weather_api.py
scripts/init/fetch/: fetch_openweather_responses.py
scripts/init/sql/: create_table_weather_data.sql  worldcities.csv
weather_etl_pipeline/: extract.py  load.py  main.py  read_coordinates.py  transform.py
