[tool.poetry]
name = "weather-etl-pipeline"
version = "0.1.0"
description = ""
authors = ["Dario Saldia <dariosaldia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.2"
sqlalchemy = "^2.0.34"
postgres = "^4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
